interprocess communication functionality added